# netxms-ocilib

./: .gitignore  configure.ac  netxms.sln
contrib/integration/: Makefile.am
contrib/startup/: Makefile.am
contrib/templates/: linux.xml
doc/: Makefile.am
include/: appagent.h  dbdrv.h  nms_common.h  nms_threads.h  nms_util.h  nxcpapi.h  nxcrypto.h  nxdbapi.h  nxsl_classes.h
sdk/samples/C/: samples.sln
src/agent/core/: localdb.cpp  nxagentd.vcproj  tunnel.cpp
src/agent/libnxagent/: libnxagent.vcproj
src/appagent/: appagent.cpp  appagent.vcproj  client.cpp
src/db/dbdrv/ocilib/: Makefile.am  ocilib.cpp  ocilib.vcproj  ocilibdrv.h
src/db/libnxdb/: dbcp.cpp  (+6 more)
src/jansson/: jansson.vcproj  jansson_private.h
src/libnetxms/: bytestream.cpp  config.cpp  crypto.cpp  geolocation.cpp  icmp.cpp  icmp6.cpp  libnetxms.h  libnetxms.vcproj  message.cpp  msgwq.cpp  net.cpp  nxcp.cpp  rwlock.cpp  serial.cpp  spoll.cpp  string.cpp  table.cpp  tools.cpp  unicode.cpp  uuid.cpp  xml.cpp
src/libnxcc/: Makefile.am  comm.cpp  libnxcc.h  libnxcc.vcproj  main.cpp
src/libnxlp/: file.cpp  libnxlp.vcproj
src/libnxsl/: env.cpp  functions.cpp  lexer.cpp  libnxsl.h  libnxsl.vcproj  library.cpp  main.cpp  vm.cpp
src/libpng/: libpng.vcproj
src/libstrophe/: libstrophe.vcproj
src/nxcproxy/: nxcproxy.vcproj
src/nxscript/: nxscript.vcproj
src/zlib/: nxzlib.vcproj
tests/: Makefile.am
tests/test-libnetxms/: test-libnetxms.vcproj
tests/test-libnxcc/: test-libnxcc.vcproj
tests/test-libnxdb/: oracle.cpp  test-libnxdb.vcproj
tests/test-libnxsnmp/: test-libnxsnmp.vcproj
(+134 files in other folders)
